Bug 135565 - Fonts preview and libreoffice cover illegible
Summary: Fonts preview and libreoffice cover illegible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords:
: 134733 136693 (view as bug list)
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2020-08-08 19:36 UTC by Damián Pérez
Modified: 2020-10-12 21:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Font list illegible (129.08 KB, image/png)
2020-08-08 19:38 UTC, Damián Pérez
Details
LibreOffice cover illegible (263.81 KB, image/png)
2020-08-08 19:39 UTC, Damián Pérez
Details
LibreOffice Numbers ok (91.83 KB, image/png)
2020-08-13 00:48 UTC, Damián Pérez
Details
delay (17.73 MB, video/mp4)
2020-09-12 19:51 UTC, Damián Pérez
Details
LibreOffice Cover in Dev 7.1 Alpha (AppImage) (189.18 KB, image/png)
2020-09-18 17:04 UTC, deneb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Damián Pérez 2020-08-08 19:36:49 UTC
Description:
If I want to open the font list, then it is all white. The rest of the toolbar is ok.


Steps to Reproduce:
1. Use the breeze dark theme.
2. Open the font list.
3. You cannot read it.



Actual Results:
The list is all white, as you can see in the attachment. The same occurs with the libreoffice cover.

Expected Results:
The font list should be with black background in order to read the font names and font previews.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version : 7.0.0.3
Operating System: KDE neon 5.19
KDE Plasma Version: 5.19.4
Theme : Breeze dark
Icon Theme : Breeze dark
KDE Frameworks Version: 5.72.0
Qt Version: 5.14.2
Kernel Version: 5.4.0-42-generic
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-2600K CPU @ 3.40GHz
Memory: 7.7 GiB of RAM
Graphics Processor: AMD PITCAIRN
Comment 1 Damián Pérez 2020-08-08 19:38:08 UTC
Created attachment 164056 [details]
Font list illegible
Comment 2 Damián Pérez 2020-08-08 19:39:25 UTC
Created attachment 164057 [details]
LibreOffice cover illegible
Comment 3 Miguel Sauco 2020-08-08 19:58:43 UTC
I confirm, the same for me using breeze dark in KDE Neon.
Comment 4 Heiko Tietze 2020-08-11 14:51:23 UTC
Looks like a KDE bug; seems the dropdown doesn't pick up the right system color. Works well with Gtk3 backend and KDE/Breeze Dark.
Comment 5 Damián Pérez 2020-08-13 00:48:45 UTC
Created attachment 164225 [details]
LibreOffice Numbers ok
Comment 6 Damián Pérez 2020-08-13 00:51:01 UTC
(In reply to Heiko Tietze from comment #4)
> Looks like a KDE bug; seems the dropdown doesn't pick up the right system
> color. Works well with Gtk3 backend and KDE/Breeze Dark.

Look at my new capture. I'm not a programmer, but the number list works fine. I don't think it's a KDE bug.
Comment 7 Damián Pérez 2020-08-13 00:51:28 UTC Comment hidden (obsolete)
Comment 8 Pierre Poulain 2020-09-04 10:23:40 UTC
I have the exact same bug (fonts list white on white) with Breeze-dark (KDE Plasma) and Adwaita-dark for GTK themes... but I could not manage to get it working, whatever the theme I installed.
Comment 9 Commit Notification 2020-09-11 13:57:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4fa53470339d8813cc40e32d2ac60483a10cf2df

tdf#135565 prepare font preview virtual device

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2020-09-11 16:24:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/908841ad600889f7b0f1c86aad240f14dda1f8bf

tdf#135565 prepare font preview virtual device

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Damián Pérez 2020-09-12 19:51:46 UTC
Created attachment 165425 [details]
delay
Comment 12 Damián Pérez 2020-09-12 19:58:13 UTC
After the fix I found a delay whenk clicking to show the font list:

1- First you click the arrow to display the font list.

2- You can see it all black for a couple of seconds.

3- Finally, the fonts appear.

I Attached a video showing this, befor the fix it didn't occur.

Thanks!

Damián.
Comment 13 Damián Pérez 2020-09-12 20:11:34 UTC
Please, watch the video with Firefox, I cannot open it with Chrome.
Comment 14 deneb 2020-09-18 16:48:02 UTC
*** Bug 134733 has been marked as a duplicate of this bug. ***
Comment 15 deneb 2020-09-18 17:04:08 UTC
Created attachment 165668 [details]
LibreOffice Cover in Dev 7.1 Alpha (AppImage)

While legibility in the font preview panel is indeed fixed, I can confirm the delay upon opening it. This only occurs the first time, however, afterwards it opens instantly.

Additionally, legibility in the start page is not entirely resolved; it looks like this for me in the AppImage version, with "Help" still in white text on a light background. In the .deb version, it even looks the same as the screenshot provided earlier. Not sure how to explain this disparity, maybe a difference in libraries. Keep in mind also that I installed the packages using dpkg on Arch with all the latest updates installed.
Comment 16 Damián Pérez 2020-09-18 18:29:27 UTC
The same for me Calvin!
Comment 17 Michael Weghorn 2020-09-21 06:11:07 UTC
(In reply to calvin.f.hoy from comment #15)
> Additionally, legibility in the start page is not entirely resolved; it
> looks like this for me in the AppImage version, with "Help" still in white
> text on a light background. In the .deb version, it even looks the same as
> the screenshot provided earlier. Not sure how to explain this disparity,
> maybe a difference in libraries. Keep in mind also that I installed the
> packages using dpkg on Arch with all the latest updates installed.

This may be the same as tdf#136555, and looks OK in Jan-Marek's screenshot he did with his pending patch.
Comment 18 Ming Hua 2020-10-12 21:17:47 UTC
*** Bug 136693 has been marked as a duplicate of this bug. ***