tdf#135565 prepare font preview virtual device

This is more of a workaround then a fix. Maybe
SalInstanceComboBox::create_render_virtual_device should do more
setup by copying text and background of the dropdown window.
Copying the values of the combobox itself will result in the wrong
settings.

But the whole code has the flaw, that it doesn't react to any
style changes anyway to invalidate the cached preview fonts, so
this is the most simple workaround. Style change handling is
currently broken in VCL in so many widgets, so I don't care.

And it looks like the background and text color is already setup
correctly by the ComboBox paint handler, so we don't need to set
them again.

Change-Id: I43aeb6ffe85d21f11f3ebb1f981c0db67247e5db